--- a/laptop/tsconfig.node.json
+++ b/laptop/tsconfig.node.json
@@ -8,6 +8,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@pages/*": ["./src/Pages/*"],
       "@components/*": ["./src/Components/*"],
       "@dto/*": ["./src/Dto/*"],
       "@hooks/*": ["./src/Hooks/*"],
