--- a/laptop/package.json
+++ b/laptop/package.json
@@ -25,7 +25,10 @@
     "axios": "^1.7.3",
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
+    "react-resizable": "^3.0.5",
+    "react-scrollbars-custom": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
