--- a/laptop/package.json
+++ b/laptop/package.json
@@ -24,10 +24,13 @@
     "@mui/material": "^5.16.7",
     "axios": "^1.7.3",
     "framer-motion": "^11.3.24",
+    "re-resizable": "^6.9.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^2.1.0",
+    "react-rnd": "^10.4.12",
     "react-scrollbars-custom": "^4.1.1"
   },
   "devDependencies": {
